--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "msedge",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\Fateh Muhammad\\Documents\\GitHub\\landing_page\\index.html"
+            "file": "c:\\Users\\X\\Documents\\GitHub\\landing_page\\index.html"
         }
     ]
 }
